--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,54 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title">Barra de Progreso</h4>
+
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.arialValuenow]="progreso1" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.arialValuenow]="progreso2" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso2 + '%'"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <!-- <div class="input-group">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button" (click)="cambiarValor(-5)">
+                            <i class="mdi mdi-minus"></i>
+                        </button>
+                    </span>
+                    <input type="text" class="form-control" name="progreso" [(ngModel)]="progreso">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
+                            <i class="mdi mdi-plus"></i>
+                        </button>
+                    </span>
+                </div> -->
+
+                <app-incrementador (actualizaValor)="progreso1=$event" nombre="Progress Azul" [progreso]="progreso1"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-incrementador (actualizaValor)="progreso2=$event" nombre="Progress Verde" [progreso]="progreso2"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+</div>
